K8S/chat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatservice
  template:
    metadata:
      labels:
        app: chatservice
    spec:
      containers:
        - name: authservice
          image: ax9587/chatsimservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: chat-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: chatservice
  ports:
  - name: chatservice
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: chatnpservice-srv
spec:
  type: NodePort
  selector:
    app: chatservice
  ports:
    - name: chatservice
      protocol: TCP
      port: 80
      targetPort: 80
