K8S/dashboard-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboardservice
  template:
    metadata:
      labels:
        app: dashboardservice
    spec:
      containers:
        - name: dashboardservice
          image: ax9587/dashboardsimservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: dashboardservice
  ports:
  - name: dashboardservice
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dashboardnpservice-srv
spec:
  type: NodePort
  selector:
    app: dashboardservice
  ports:
    - name: dashboardservice
      protocol: TCP
      port: 80
      targetPort: 80
