K8S/payment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      containers:
        - name: paymentservice
          image: ax9587/paymentsimservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: auth-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: paymentservice
  ports:
  - name: paymentservice
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: paymentnpservice-srv
spec:
  type: NodePort
  selector:
    app: paymentservice
  ports:
    - name: paymentservice
      protocol: TCP
      port: 80
      targetPort: 80
