K8S/pricing-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pricingservice
  template:
    metadata:
      labels:
        app: pricingservice
    spec:
      containers:
        - name: pricingservice
          image: ax9587/pricingsimservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: pricing-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: pricingservice
  ports:
  - name: pricingservice
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pricingnpservice-srv
spec:
  type: NodePort
  selector:
    app: pricingservice
  ports:
    - name: pricingservice
      protocol: TCP
      port: 80
      targetPort: 80
